--- a/templates/base.html
+++ b/templates/base.html
@@ -86,7 +86,7 @@
     <!-- Marquee Ticker -->
     <div class="bg-roots-black text-roots-white overflow-hidden py-2 border-b-4 border-roots-black fixed top-0 w-full z-50">
         <div class="whitespace-nowrap animate-marquee font-bold uppercase tracking-widest text-sm">
-            🚨 BREAKING: WEED IS ECONOMIC FREEDOM // 🚨 HANG THE CORRUPT // 🐍 TINGIZA MTI // 🚨 EXPORT HYENA MEAT // 🐍 JAH RASTAFARI // 🚨 4-DAY WORK WEEK IS COMING
+            🚨 BREAKING: HEMP IS ECONOMIC FREEDOM // 🚨 WEZI WA MALI YA UMA WATANYONGWA //  TINGIZA MTI // 🚨 EXPORT HYENA MEAT // 🚨GEN Z // 🚨 4-DAY WORK WEEK IS COMING
         </div>
     </div>
 
@@ -136,11 +136,32 @@
                 <span class="font-bold uppercase tracking-widest text-lg">Truths</span>
             </a>
             
+            <a href="/events/" class="group flex items-center px-6 py-4 text-white hover:bg-white hover:text-roots-black transition-all border-b border-gray-800">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="w-8 h-8 mr-4 group-hover:scale-110 transition-transform">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 0 1 2.25-2.25h13.5A2.25 2.25 0 0 1 21 7.5v11.25m-18 0h18M5.25 12h13.5" />
+                </svg>
+                <span class="font-bold uppercase tracking-widest text-lg">Rallies</span>
+            </a>
+            
             <a href="/donate/" class="group flex items-center px-6 py-4 text-white hover:bg-white hover:text-roots-black transition-all border-b border-gray-800">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="w-8 h-8 mr-4 group-hover:scale-110 transition-transform">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 18.75a60.07 60.07 0 0 1 15.797 2.101c.727.198 1.453-.342 1.453-1.096V18.75M3.75 4.5v.75A.75.75 0 0 1 3 6h-.75m0 0v-.375c0-.621.504-1.125 1.125-1.125H20.25M2.25 6v9m18-10.5v.75c0 .414.336.75.75.75h.75m-1.5-1.5h.375c.621 0 1.125.504 1.125 1.125v9.75c0 .621-.504 1.125-1.125 1.125h-.375m1.5-1.5H21a.75.75 0 0 0-.75.75v.75m0 0H3.75m0 0h-.375a1.125 1.125 0 0 1-1.125-1.125V15m1.5 1.5v-.75A.75.75 0 0 0 3 15h-.75M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Zm3 0h.008v.008H18V10.5Zm-12 0h.008v.008H6V10.5Z" />
                 </svg>
                 <span class="font-bold uppercase tracking-widest text-lg">Fund</span>
+            </a>
+            
+            <a href="/shop/" class="group flex items-center px-6 py-4 text-white hover:bg-white hover:text-roots-black transition-all border-b border-gray-800">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="w-8 h-8 mr-4 group-hover:scale-110 transition-transform">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 1 0-7.5 0v4.5m11.356-1.993 1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 0 1-1.12-1.243l1.264-12A1.125 1.125 0 0 1 5.513 7.5h12.974c.576 0 1.059.435 1.119 1.007ZM8.625 10.5a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm7.5 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Z" />
+                </svg>
+                <span class="font-bold uppercase tracking-widest text-lg">Shop</span>
+            </a>
+            
+            <a href="/resources/" class="group flex items-center px-6 py-4 text-white hover:bg-white hover:text-roots-black transition-all border-b border-gray-800">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="w-8 h-8 mr-4 group-hover:scale-110 transition-transform">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m2.25 0H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z" />
+                </svg>
+                <span class="font-bold uppercase tracking-widest text-lg">Resources</span>
             </a>
 
             <a href="/join/" class="group flex items-center px-6 py-4 text-roots-red hover:bg-roots-red hover:text-white transition-all border-b border-gray-800 mt-auto mb-8 border-t-4 border-t-roots-red">
@@ -153,37 +174,55 @@
     </nav>
 
     <!-- Mobile Sticky Bottom Navigation (Visible on < md) -->
-    <nav class="md:hidden fixed bottom-0 left-0 w-full bg-roots-white border-t-4 border-roots-black z-40">
-        <div class="grid grid-cols-5 h-20 w-full">
-            <a href="/" class="group flex flex-col items-center justify-center border-r-2 border-roots-black hover:bg-roots-black hover:text-white transition-all duration-0">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-8 h-8 mb-1 group-hover:scale-110 transition-transform">
+    <nav class="md:hidden fixed bottom-0 left-0 w-full bg-roots-white border-t-4 border-roots-black z-40 overflow-hidden">
+        <div class="flex items-stretch overflow-x-auto h-20 w-full snap-x snap-mandatory scrollbar-hide">
+            <a href="/" class="snap-start min-w-[20%] flex-shrink-0 group flex flex-col items-center justify-center border-r-2 border-roots-black hover:bg-roots-black hover:text-white transition-all duration-0">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-6 h-6 mb-1 group-hover:scale-110 transition-transform">
                   <path stroke-linecap="round" stroke-linejoin="round" d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
                 </svg>
-                <span class="text-[10px] font-black uppercase tracking-widest">Home</span>
+                <span class="text-[9px] font-black uppercase tracking-widest">Home</span>
             </a>
-            <a href="/about/" class="group flex flex-col items-center justify-center border-r-2 border-roots-black hover:bg-roots-black hover:text-white transition-all duration-0">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-8 h-8 mb-1 group-hover:scale-110 transition-transform">
+            <a href="/about/" class="snap-start min-w-[20%] flex-shrink-0 group flex flex-col items-center justify-center border-r-2 border-roots-black hover:bg-roots-black hover:text-white transition-all duration-0">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-6 h-6 mb-1 group-hover:scale-110 transition-transform">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M15 19.128a9.38 9.38 0 0 0 2.625.372 9.337 9.337 0 0 0 4.121-.952 4.125 4.125 0 0 0-7.533-2.493M15 19.128v-.003c0-1.113-.285-2.16-.786-3.07M15 19.128v.106A12.318 12.318 0 0 1 8.624 21c-2.331 0-4.512-.645-6.374-1.766l-.001-.109a6.375 6.375 0 0 1 11.964-3.07M12 6.375a3.375 3.375 0 1 1-6.75 0 3.375 3.375 0 0 1 6.75 0Zm8.25 2.25a2.625 2.625 0 1 1-5.25 0 2.625 2.625 0 0 1 5.25 0Z" />
                 </svg>
-                <span class="text-[10px] font-black uppercase tracking-widest">About</span>
+                <span class="text-[9px] font-black uppercase tracking-widest">About</span>
             </a>
-            <a href="/manifesto/" class="group flex flex-col items-center justify-center border-r-2 border-roots-black hover:bg-roots-black hover:text-white transition-all duration-0">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-8 h-8 mb-1 group-hover:scale-110 transition-transform">
+            <a href="/manifesto/" class="snap-start min-w-[20%] flex-shrink-0 group flex flex-col items-center justify-center border-r-2 border-roots-black hover:bg-roots-black hover:text-white transition-all duration-0">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-6 h-6 mb-1 group-hover:scale-110 transition-transform">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m2.25 0H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z" />
                 </svg>
-                <span class="text-[10px] font-black uppercase tracking-widest">Truths</span>
+                <span class="text-[9px] font-black uppercase tracking-widest">Truths</span>
             </a>
-            <a href="/donate/" class="group flex flex-col items-center justify-center border-r-2 border-roots-black hover:bg-roots-black hover:text-white transition-all duration-0">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-8 h-8 mb-1 group-hover:scale-110 transition-transform">
+            <a href="/events/" class="snap-start min-w-[20%] flex-shrink-0 group flex flex-col items-center justify-center border-r-2 border-roots-black hover:bg-roots-black hover:text-white transition-all duration-0">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-6 h-6 mb-1 group-hover:scale-110 transition-transform">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 0 1 2.25-2.25h13.5A2.25 2.25 0 0 1 21 7.5v11.25m-18 0h18M5.25 12h13.5" />
+                </svg>
+                <span class="text-[9px] font-black uppercase tracking-widest">Rallies</span>
+            </a>
+            <a href="/donate/" class="snap-start min-w-[20%] flex-shrink-0 group flex flex-col items-center justify-center border-r-2 border-roots-black hover:bg-roots-black hover:text-white transition-all duration-0">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-6 h-6 mb-1 group-hover:scale-110 transition-transform">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 18.75a60.07 60.07 0 0 1 15.797 2.101c.727.198 1.453-.342 1.453-1.096V18.75M3.75 4.5v.75A.75.75 0 0 1 3 6h-.75m0 0v-.375c0-.621.504-1.125 1.125-1.125H20.25M2.25 6v9m18-10.5v.75c0 .414.336.75.75.75h.75m-1.5-1.5h.375c.621 0 1.125.504 1.125 1.125v9.75c0 .621-.504 1.125-1.125 1.125h-.375m1.5-1.5H21a.75.75 0 0 0-.75.75v.75m0 0H3.75m0 0h-.375a1.125 1.125 0 0 1-1.125-1.125V15m1.5 1.5v-.75A.75.75 0 0 0 3 15h-.75M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Zm3 0h.008v.008H18V10.5Zm-12 0h.008v.008H6V10.5Z" />
                 </svg>
-                <span class="text-[10px] font-black uppercase tracking-widest">Fund</span>
+                <span class="text-[9px] font-black uppercase tracking-widest">Fund</span>
             </a>
-            <a href="/join/" class="group flex flex-col items-center justify-center hover:bg-roots-red hover:text-white transition-all duration-0">
-               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-8 h-8 mb-1 group-hover:scale-110 transition-transform">
+            <a href="/shop/" class="snap-start min-w-[20%] flex-shrink-0 group flex flex-col items-center justify-center border-r-2 border-roots-black hover:bg-roots-black hover:text-white transition-all duration-0">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-6 h-6 mb-1 group-hover:scale-110 transition-transform">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 1 0-7.5 0v4.5m11.356-1.993 1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 0 1-1.12-1.243l1.264-12A1.125 1.125 0 0 1 5.513 7.5h12.974c.576 0 1.059.435 1.119 1.007ZM8.625 10.5a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm7.5 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Z" />
+                </svg>
+                <span class="text-[9px] font-black uppercase tracking-widest">Shop</span>
+            </a>
+            <a href="/resources/" class="snap-start min-w-[20%] flex-shrink-0 group flex flex-col items-center justify-center border-r-2 border-roots-black hover:bg-roots-black hover:text-white transition-all duration-0">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-6 h-6 mb-1 group-hover:scale-110 transition-transform">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m2.25 0H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z" />
+                </svg>
+                <span class="text-[9px] font-black uppercase tracking-widest">Resources</span>
+            </a>
+            <a href="/join/" class="snap-start min-w-[20%] flex-shrink-0 group flex flex-col items-center justify-center hover:bg-roots-red hover:text-white transition-all duration-0 border-l-2 border-roots-black" style="margin-left: -2px;">
+               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-6 h-6 mb-1 group-hover:scale-110 transition-transform">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M18 7.5v3m0 0v3m0-3h3m-3 0h-3m-1-6h-8a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2v-8a2 2 0 0 0-2-2Z" />
                 </svg>
-                <span class="text-[10px] font-black uppercase tracking-widest">Join</span>
+                <span class="text-[9px] font-black uppercase tracking-widest">Join</span>
             </a>
         </div>
     </nav>
