--- a/templates/core/manifesto.html
+++ b/templates/core/manifesto.html
@@ -9,7 +9,7 @@
             <span class="text-white bg-roots-red px-4 transform rotate-2 inline-block shadow-[8px_8px_0px_0px_#1a1a1a]">Truths</span>
         </h1>
         <p class="text-xl font-bold uppercase border-t-4 border-b-4 border-roots-black py-4 inline-block">
-            Our 10-Point Manifesto
+            Our 11 Point Manifesto
         </p>
     </header>
 
