--- a/templates/users/join.html
+++ b/templates/users/join.html
@@ -5,7 +5,7 @@
     <h1 class="text-4xl font-bold uppercase mb-6 border-b-4 border-roots-black inline-block">Join Roots Party</h1>
     
     <div class="p-6 border-4 border-roots-black bg-roots-white shadow-[8px_8px_0px_0px_rgba(26,26,26,1)]">
-        <form hx-post="/join/" class="space-y-6">
+        <form hx-post="/join/" hx-target="body" hx-indicator="#global-loader" class="space-y-6">
             {% csrf_token %}
             
             <div>
